applications/base/test/certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: cert-webtest
  namespace: podinfo
spec:
  dnsNames:
    - webtest.cbxon.co.uk
  issuerRef:
    kind: ClusterIssuer
    name: cert-cluster-issuer
  secretName: cert-webtest
