applications/base/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webtest
  name: webtest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webtest
  strategy: {}
  template:
    metadata:
      labels:
        app: webtest
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - name: http
          containerPort: 80
        resources: {}
status: {}
