applications/base/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webtest
spec:
  ingressClassName: nginx
  rules:
  - host: webtest.cbxon.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: service-webtest
          servicePort: 80
