applications/base/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: webtest

resources:
  - namespace.yaml
  - deployment.yaml
  - service.yaml
  - ingress.yaml
