applications/base/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webtest
  name: webtest
spec:
  ports:
  - name: http
    port: 9113
    protocol: TCP
    targetPort: 80
  selector:
    app: webtest
  type: ClusterIP
status:
  loadBalancer: {}
